SVY-17036 spike: how can we improve the appearance of the developer using eclipse css themes fix regression for buttons not visible on mac os: SVY-17327 wrong color scheme

--- a/com.servoy.eclipse.core/servoytheme/servoy.css
+++ b/com.servoy.eclipse.core/servoytheme/servoy.css
@@ -33,6 +33,11 @@
 	background-color: #FFFFFF;
 }
 
+Button[style~='SWT.PUSH']  {
+    background-color: unset;
+    color: unset;
+}
+
 Table, Tree {
 	swt-lines-visible: false;
 }
